--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang ="en">
 <head>
- 	<title>Andrew J Owens</title>
- 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">	
-	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-	<!-- Latest compiled JavaScript -->
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="ajsite.css" media="screen" />
+  <title>Andrew J Owens</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> 
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+  <!-- Latest compiled JavaScript -->
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="ajsite.css" media="screen" />
 </head>
 <body>
 <div id="wrap">
@@ -19,11 +19,11 @@
   <h3>On the object oriented eightfold path to enlightenment.<h3>
 </div>
 <div class="row">
-	<div id="block"class="col-sm-4"></div>
- 	<div id="blocl"class="col-sm-4">
-  	<p>I am on a journey. A journey through the world of software and networks.  Electrons and neurons.  A winding path which contains many unforeseen oppurtunities.  Oppurtunities for success and peril alike.</p>
-  	</div>
-  	<div id="block"class="col-sm-4"></div>
+  <div id="block"class="col-sm-4"></div>
+  <div id="blocl"class="col-sm-4">
+    <p>I am on a journey. A journey through the world of software and networks.  Electrons and neurons.  A winding path which contains many unforeseen oppurtunities.  Oppurtunities for success and peril alike.</p>
+    </div>
+    <div id="block"class="col-sm-4"></div>
 </div>
 <div class="row">
   <div id="block2"class="col-sm-1">
@@ -31,25 +31,25 @@
 
 <div id="footer">
       <div class="container">
-      	<ul>
-      		<li>
-      			Contact |
-      		</li>
-          <li>    <li>
-      		<li>
-      			<a href="https://www.github.com/t33gjy6">Github</a>
-      		</li>
-      		<li>    </li>
+        <ul>
           <li>
-      			<a href="https://www.linkedin.com/in/owensaj">LinkedIn</a>
-      		</li>
-      		<li>
-      			<a href="aj.owens@protonmail.com">Email</a>
-      		</li>
-      	</ul>
-      	</div>
+            Contact |
+          </li>
+          <li>    <li>
+          <li>
+            <a href="https://www.github.com/t33gjy6">Github</a>
+          </li>
+          <li>    </li>
+          <li>
+            <a href="https://www.linkedin.com/in/owensaj">LinkedIn</a>
+          </li>
+          <li>
+            <a href="aj.owens@protonmail.com">aj.owens@protonmail.com</a>
+          </li>
+        </ul>
+        </div>
     </div>
-
+</div>
 </body>
 
 </html>
